Implemented global alert component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <main class="container-fluid">
   <app-header></app-header>
+  <app-alert></app-alert>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </main>
