--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,15 @@ html {
 main {
   padding-bottom: 3.75rem;  /* Padding to prevent the main body from extending behind the footer */
 }
+
+.fa-icon-small {
+  font-size: .75rem;        /* Small font size setting for the Font Awesome icons */
+}
+
+.fa-icon-regular {
+  font-size: 1rem;          /* Regular font size setting for the Font Awesome icons */
+}
+
+.fa-icon-large {
+  font-size: 1.25rem;       /* Large font size setting for the Font Awesome icons */
+}
