--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,13 +2,14 @@
   <nav class="navbar navbar-expand-md navbar-light col-12">
     <a class="navbar-brand"
        [routerLink]="['/home']"
+       tabindex="-1"
        aria-label="Acme Products"
-       (click)="navbarCollapsed=true">
+       (click)="navbarCollapsed = true">
       ACME
     </a>
     <button class="navbar-toggler navbar-toggler-right"
             type="button"
-            (click)="navbarCollapsed=!navbarCollapsed"
+            (click)="navbarCollapsed = !navbarCollapsed"
             [attr.aria-expanded]="!navbarCollapsed"
             aria-controls="navbarContent"
             aria-expanded="false"
@@ -20,13 +21,55 @@
          class="collapse navbar-collapse align-self-stretch"
          [ngbCollapse]="navbarCollapsed">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item d-lg-flex"
-            [routerLinkActive]="['active']">
+        <li class="nav-item d-lg-flex">
           <a class="nav-link d-lg-flex flex-lg-column-reverse"
              [routerLink]="['/home']"
-             (click)="navbarCollapsed=true">
-            Home
+             (click)="navbarCollapsed = true">
+            <div title="Acme Home">
+              <fa-icon [icon]="faHome" class="mr-1"></fa-icon>
+              Home
+            </div>
           </a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li *ngIf="!isAuthenticated"
+            class="nav-item d-lg-flex">
+          <a [routerLink]="['/login']"
+             class="nav-link d-lg-flex flex-lg-column-reverse"
+             (click)="navbarCollapsed = true">
+            <div>
+              <fa-icon [icon]="faSignInAlt" class="mr-2"></fa-icon>
+              Login
+            </div>
+          </a>
+        </li>
+        <li *ngIf="isAuthenticated"
+            class="nav-item dropdown"
+            ngbDropdown>
+          <a class="nav-link dropdown-toggle"
+             id="header-user-dropdown"
+             tabindex="0"
+             ngbDropdownToggle>
+            <div>
+              <fa-icon [icon]="faUser" class="mr-2"></fa-icon>
+              {{ username }}
+            </div>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right"
+               aria-labelledby="header-user-dropdown"
+               ngbDropdownMenu>
+            <a ngbDropdownItem
+               class="dropdown-item"
+               tabindex="0"
+               (keyup.enter)="logout()"
+               (click)="logout()">
+              <div>
+                <fa-icon [icon]="faSignOutAlt" class="mr-2"></fa-icon>
+                Logout
+              </div>
+            </a>
+          </div>
         </li>
       </ul>
     </div>
