Added JWT support and updated header component

--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,17 +1,23 @@
 header {
-    padding-bottom: .5rem; /* Provides some separation between the header and the main content */
-  }
-  
-  header > nav.navbar {
-    background: linear-gradient(315deg, #00b712 0%, #5aff15 74%); /* Provides the header gradient background color */
-  }
-  
-  header #navbarContent .nav-link {
-    text-align: center; /* Aligns the links to the center, especially when collapsed */
-  }
-  
-  header #navbarContent .nav-link:focus,
-  header #navbarContent .nav-link:hover {
-    background-color: rgba(0, 183, 18, 0.4); /* Provides contrast to indicate a link is focused or hovered */
-  }
-  
+  padding-bottom: .5rem; /* Provides some separation between the header and the main content */
+}
+
+header .navbar {
+  user-select: none; /* Prevent double-clicks from selecting text */
+}
+
+header > nav.navbar {
+  background: linear-gradient(315deg, #00b712 0%, #5aff15 74%); /* Provides the header gradient background color */
+}
+
+header #navbarContent ul.navbar-nav .dropdown-toggle:focus,
+header #navbarContent ul.navbar-nav .nav-link:focus {
+  background-color: rgba(0, 183, 18, 0.4); /* Provides contrast to indicate a link is focused or hovered */
+  outline: none; /* Don't show the outline */
+}
+
+header #navbarContent .nav-link {
+  width: 100%; /* Ensure the link occupies the full width */
+  text-align: center; /* Aligns the links to the center, especially when collapsed */
+  padding: 1rem; /* Pad the link to provide a bigger area for activating it */
+}
