Added JWT support, updated header component and shared module

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,14 +1,14 @@
 <header class="row">
   <nav class="navbar navbar-expand-md navbar-light col-12">
     <a class="navbar-brand"
-       [routerLink]="['/home']"
+       tabindex="-1"
        aria-label="Acme Products"
-       (click)="navbarCollapsed=true">
+       (click)="navbarCollapsed = true">
       ACME
     </a>
     <button class="navbar-toggler navbar-toggler-right"
             type="button"
-            (click)="navbarCollapsed=!navbarCollapsed"
+            (click)="navbarCollapsed = !navbarCollapsed"
             [attr.aria-expanded]="!navbarCollapsed"
             aria-controls="navbarContent"
             aria-expanded="false"
@@ -20,11 +20,9 @@
          class="collapse navbar-collapse align-self-stretch"
          [ngbCollapse]="navbarCollapsed">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item d-lg-flex"
-            [routerLinkActive]="['active']">
+        <li class="nav-item d-lg-flex">
           <a class="nav-link d-lg-flex flex-lg-column-reverse"
-             [routerLink]="['/home']"
-             (click)="navbarCollapsed=true">
+             (click)="navbarCollapsed = true">
             Home
           </a>
         </li>
@@ -32,3 +30,4 @@
     </div>
   </nav>
 </header>
+
