--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -11,7 +11,8 @@ header > nav.navbar {
 }
 
 header #navbarContent ul.navbar-nav .dropdown-toggle:focus,
-header #navbarContent ul.navbar-nav .nav-link:focus {
+header #navbarContent ul.navbar-nav .nav-link:focus,
+header #navbarContent ul.navbar-nav .nav-link:hover {
   background-color: rgba(0, 183, 18, 0.4); /* Provides contrast to indicate a link is focused or hovered */
   outline: none; /* Don't show the outline */
 }
