Implemented breadcrumb and page-not-found components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <main class="container-fluid">
   <app-header></app-header>
   <app-alert></app-alert>
+  <app-breadcrumb></app-breadcrumb>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </main>
