--- a/src/app/features/supplier/supplier.component.html
+++ b/src/app/features/supplier/supplier.component.html
@@ -1,3 +1,67 @@
-<p>
-  supplier works!
-</p>
+<section class="mt-3">
+  <div>
+    <button id="add-new-supplier"
+            title="Add New Supplier"
+            class="btn btn-secondary"
+            (click)="createNewSupplier()">
+      <fa-icon [icon]="faPlus" class="mr-1"></fa-icon>
+      New Supplier
+    </button>
+  </div>
+
+  <table class="table table-striped mt-3">
+    <thead>
+      <tr>
+        <th scope="col">Options</th>
+        <th scope="col">Supplier</th>
+        <th scope="col">City</th>
+        <th scope="col">State</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let supplier of suppliers">
+        <th scope="row">
+          <button class="btn icon"
+                  title="View Supplier"
+                  (click)="viewSupplier(supplier)">
+            <fa-icon [icon]="faInfo"></fa-icon>
+          </button>
+          <button class="btn icon"
+                  title="Edit Supplier"
+                  (click)="updateSupplier(supplier)">
+            <fa-icon [icon]="faPencil"></fa-icon>
+          </button>
+          <button class="btn icon"
+                  title="Delete Supplier"
+                  (click)="deleteSupplier(supplier)">
+            <fa-icon [icon]="faTrash"></fa-icon>
+          </button>
+        </th>
+        <td>
+          {{ supplier.name }}
+        </td>
+        <td>
+          {{ supplier.city }}
+        </td>
+        <td>
+          {{ getStateAbbreviation(supplier.state) }}
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div class="d-flex justify-content-between p-2">
+    <ngb-pagination [collectionSize]="supplierTotal"
+                    [(page)]="page"
+                    [pageSize]="pageSize">
+    </ngb-pagination>
+
+    <select class="custom-select"
+            style="width: auto"
+            [(ngModel)]="pageSize">
+      <option [ngValue]="5">5 items per page</option>
+      <option [ngValue]="10">10 items per page</option>
+      <option [ngValue]="25">25 items per page</option>
+    </select>
+  </div>
+</section>
